--- a/index.html
+++ b/index.html
@@ -4,9 +4,82 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Karim Blog</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      background: #f4f4f8;
+      color: #333;
+      line-height: 1.6;
+      padding: 20px;
+    }
+
+    header {
+      background: #4a90e2;
+      color: white;
+      padding: 20px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      margin-bottom: 30px;
+    }
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    p.subtitle {
+      font-size: 1.1em;
+      color: #e0e0e0;
+    }
+
+    section {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    footer {
+      margin-top: 40px;
+      text-align: center;
+      font-size: 0.9em;
+      color: #999;
+    }
+
+    a {
+      color: #4a90e2;
+      text-decoration: none;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-  <h1>Добро пожаловать в мой блог!</h1>
-  <p>Здесь будет мой контент.</p>
+  <header>
+    <h1>Добро пожаловать в блог Карима!</h1>
+    <p class="subtitle">Место, где живут идеи 🚀</p>
+  </header>
+
+  <section>
+    <h2>О чём будет блог?</h2>
+    <p>Здесь я буду делиться мыслями, идеями, заметками и проектами.  
+    Всё — от кода до жизни. Оставайтесь на связи!</p>
+  </section>
+
+  <footer>
+    © 2025 Karim Tuyakov. Сделано с любовью ❤️
+  </footer>
 </body>
 </html>
